# pr_review_agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: review_service.py
app/config/: config.py
app/github/: client.py  diff_parser.py
app/llm/: reviewer.py
app/models/: findings.py
app/retrieval/: retriever.py  symbols.py
evals/: dataset.py  harness.py  report.py  run.py  scoring.py
evals/cases/: seed.json
runs/: runs.jsonl
tests/: test_diff_parser.py  test_eval.py  test_github_client.py  test_retrieval.py  test_review_service.py
