[project]
name = "pr-review-agent"
version = "0.1.0"
description = "CLI agent that reviews GitHub pull requests with an LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
]
